--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,12 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.android.support:cardview-v7'
+    implementation 'com.android.support:recyclerview-v7'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.databinding:databinding-runtime:4.1.3'
     testImplementation 'junit:junit:4.+'
