--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.android.support:cardview-v7'
     implementation 'com.android.support:recyclerview-v7'
     implementation 'androidx.appcompat:appcompat:1.4.0'
