--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation 'nl.dionsegijn:konfetti-compose:2.0.2'
+    implementation 'nl.dionsegijn:konfetti-xml:2.0.2'
     implementation 'com.android.support:cardview-v7'
     implementation 'com.android.support:recyclerview-v7'
     implementation 'androidx.appcompat:appcompat:1.4.0'
